# scCCVGBen

./: .gitignore  CONTRIBUTING.md  HANDOFF_GPU_SESSION.md  KNOWN_ISSUES.md  LAUNCH_BENCHMARK.md  LICENSE  README.md  REPRODUCE.md  TRAINING_STATE.md  pyproject.toml
.omc/: project-memory.json
data/: benchmark_manifest.csv  benchmark_summary.json  data_validation.csv  dataset_audit.json  dataset_status_2026-04-28.csv  dropped_scatac_v2.csv  existing_scatac_inventory.csv  existing_scrna_diversity.csv  geo_metadata_cache.json  inventory_summary.md  metric_outliers_2026-04-28.csv  residual_gap_report.md  reuse_map.csv  revised_methodology_manifest.csv  scatac_baseline_method_list.csv  scrna_blocklist.txt  scrna_candidate_pool.csv  species_audit.csv  species_audit_v2.csv
docs/: framework-comparison.md
examples/: README.md  quickstart.py
scccvgben/: __init__.py  config.py
scripts/: README.md  audit_ai_tone.py  audit_manuscript_consistency.py  audit_metric_outliers.py  audit_submission_ready.py  build_datasets_csv.py  build_datasets_json.py  build_inventory.py  build_site_data.py  build_supplementary_table.py  build_ucb_timeseries.py  cluster_multiseed.py  cluster_sensitivity.py  cluster_sensitivity_partial.py  compose_manuscript_figures.py  compute_paper_effects.py  extract_biovalidation_cluster_markers.py  fetch_geo_scrna.py  health_check.sh  locate_scatac_baselines.py  make_ablation_pair.py  make_all_figures.py  make_axisA_figure.py  make_axisB_figure.py  make_axisC_figure.py  make_biovalidation_pairs.py  make_diff_vs_ccvgae.py  make_fig01_dataset_metadata.py  (+41 more)
(+654 files in other folders)
